# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
include/: aabb.h  bvh_node.h  camera.h  color.h  constant_medium.h  envs.h  hit_record.h  hittable.h  hittable_list.h  interval.h  material.h  quad.h  ray.h  raytracer.h  sphere.h  texture.h  utils.h  vec3.h
src/: aabb.cpp  bvh_node.cpp  camera.cpp  color.cpp  envs.cpp  hit_record.cpp  hittable_list.cpp  main.cpp  main_old.cpp  quad.cpp
